# dotfiles

./: .Xresources  .aliases  .aliases_mt  .bash_aliases  .bashrc  .bashrc_mt  .gitconfig  .gitignore  .inputrc  .profile  .tmux.conf  .vimrc  .xinitrc  .zprofile  .zshrc  .zshrc_mt  README.md
.config/: kdeglobals  kglobalshortcutsrc  khotkeysrc  kwinrc
.config/Code - OSS/User/: keybindings.json  settings.json
.config/alacritty/: alacritty.toml  alacritty.yml  alacritty.yml.orig
.config/blesh/: init.sh
.config/bspwm/: bspwmrc  external_rules.sh
.config/dunst/: dunstrc
.config/eww/: eww.scss  eww.yuck  primary.yuck  secondary.yuck
.config/eww/scripts/: ws.sh
.config/helix/: config.toml  languages.toml
.config/herbstluftwm/: autostart
.config/hypr/: hyprland.conf  hyprpaper.conf
.config/i3/: config
.config/kitty/: kitty.conf
.config/nvim/: init.lua  init.vim  lazy-lock.json  plugins.lua
.config/nvim.new/: lazy-lock.json
.config/picom/: picom.conf
.config/polybar/: blocks.ini  config.ini  launch.sh
.config/rofi/: application_launcher.rasi  config.rasi
.config/sway/: config
.config/sxhkd/: sxhkdrc
.config/waybar/: config  style.css
.config/wofi/: style.css
.git_hooks/: commit-msg
.scripts/: colors.bash  install_rmw_connextdds.bash  install_ros2_ws.bash  install_ros_galactic.bash  log.bash
.ssh/: config
.ssh/config.d/: home  mtr  mtr.ssh
.vim/: .netrwhist
.vscode-oss/: argv.json
.vscode-oss/extensions/beatscherrer.gravel-pit-0.37.0/example_code/: CMakeLists.txt  Student.java  main.cpp  main.dart  powershell.ps1
(+300 files in other folders)
